wordle-solver/src/HelpScreen.css
.help-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000; 
}
  
.help-content {
    text-align: left;
    background: var(--bg-black);
    padding: 1rem;
    border-radius: 8px;
    border: 1px solid rgb(34, 34, 34);
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    flex-direction: column;
    max-height: 100%;
    z-index: 1001; 
    opacity: 1;
    transition: opacity 0.15s ease-out;
}

.help-content.hidden {
    opacity: 0;
}

.exit-button {
    display: flex;
    justify-self: flex-end;
    justify-content: center;
    align-items: center;
    background-color: rgb(17, 17, 17);
    width: 18px;
    height: 18px;
    padding: 0;
}

.exit-button:focus, 
.exit-button:hover {
    outline: none;
    border: 1px solid transparent;
}

.exit-icon {
    width: 100%;
    height: 100%;
    vertical-align: middle;
}

.help-header {
    color: white;
}

.help-list {
    color: white;
    list-style-type: disc; /* Add this line to style the list */
    margin-left: 30px; 
    margin-right: 30px;
}

